# Finch-mlir

./: CMakeLists.txt  README.md  dotproduct.ll  ex.mlir  print.mlir  setup.py  sparsedot.mlir  test.mlir  test10.mlir  test11.mlir  test12.mlir  test2.mlir  test3.mlir  test4.mlir  test5.mlir  test6.mlir  test7.mlir  test8.mlir  test8_opt.ll  test8_opt.mlir  test9.mlir
.github/workflows/: ci.yml
ci/: environment.yml
finch-opt/: CMakeLists.txt  finch-opt.cpp
finch-plugin/: CMakeLists.txt  finch-plugin.cpp
finch-translate/: CMakeLists.txt  finch-translate.cpp
include/: CMakeLists.txt
include/Finch/: CMakeLists.txt  FinchDialect.h  FinchDialect.td  FinchOps.h  FinchOps.td  FinchPasses.h  FinchPasses.td  FinchTypes.h  FinchTypes.td
include/Finch-c/: Dialects.h
include/Standalone/: CMakeLists.txt  StandaloneDialect.td  StandaloneOps.h  StandaloneOps.td  StandalonePasses.td  StandaloneTypes.td
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Finch/: CMakeLists.txt  FinchDialect.cpp  FinchOps.cpp  FinchPasses.cpp  FinchTypes.cpp
lib/Standalone/: StandaloneOps.cpp  StandalonePasses.cpp
python/: CMakeLists.txt
python/mlir_finch/dialects/: FinchOps.td
standalone-opt/: CMakeLists.txt  standalone-opt.cpp
standalone-translate/: standalone-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  pdl.mlir
test/CAPI/: CMakeLists.txt  finch-capi-test.c
test/Finch/: access.mlir  dummy.mlir  finch-opt.mlir  finch-pass-plugin.mlir  finch-plugin.mlir  finch-translate.mlir  run-looplet-test.mlir
test/Standalone/: access.mlir  run-looplet-test.mlir
test/python/: smoketest.py
